--- a/css/vagas.css
+++ b/css/vagas.css
@@ -158,16 +158,27 @@ div.item {
   pointer-events: auto;
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
-   transition: transform 0.25s ease-in-out; 
+  transition: transform 0.25s ease-in-out; 
   transform: rotateY(calc(-0.9deg * var(--r))) translateX(calc(-300px * var(--r) ));
   z-index: calc((var(--position) - var(--abs)));
   
 }
 
+
+
 div.item:nth-of-type(1) {
   --offset: 1;
   background-color: var(--main_one);
+
 }
+#section_vaga_recomendada_1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text_one);
+  
+}
+
  div.item:nth-of-type(2) {
   --offset: 2;
   background-color: var(--text_one);
